--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+*,
+*:before,
+*::after {
+  margin: 0;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
